--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,8 @@ indent_size = 4
 [*.{kt,kts}]
 ij_kotlin_imports_layout = *
 disabled_rules=import-ordering
-
+ij_kotlin_allow_trailing_comma = true
+ij_kotlin_allow_trailing_comma_on_call_site = true
 # Note that in this case 'import-ordering' rule will be active and 'indent' will be disabled
 [api/*.{kt,kts}]
 disabled_rules=indent
