--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,24 @@
 name: Build
-
 on:
   push:
+    branches:
+      - main
     paths-ignore:
       - '**.md'
   pull_request:
-    paths-ignore:
-      - '**.md'
+    types: [ opened, synchronize, reopened ]
+
+env:
+  GRADLE_HOME: ${{ github.workspace }}/gradle-home
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
@@ -24,31 +29,52 @@ jobs:
       - name: Spotless Apply
         run: ./gradlew spotlessApply
 
-      - name: Spotless
-        run: ./gradlew spotlessCheck --stacktrace
+      - name: Cache gradle dependencies
+        uses: actions/cache@v2.1.6
+        with:
+          path: ${{ env.GRADLE_HOME }}/caches
+          # Include the SHA in the hash so this step always adds a cache entry. If we didn't use the SHA, the artifacts
+          # would only get cached once for each build config hash.
+          # Don't use ${{ runner.os }} in the key so we don't re-assemble for UI tests.
+          key: gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/buildSrc/**') }}-${{ github.sha }}
+          # The first time a SHA is assembled, we still want to load dependencies from the cache.
+          # Note that none of jobs dependent on this one need restore keys, since they'll always have an exact hit.
+          restore-keys: |
+            gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/buildSrc/**') }}-
 
-      - name: Detekt
-        run: ./gradlew detekt --stacktrace
+      - name: Make checksum.sh executable
+        run: chmod +x checksum.sh
 
-      - name: Ktlint
-        run: ./gradlew ktlintCheck --stacktrace
+      - name: Generate cache key
+        run: ./checksum.sh checksum.txt
 
-      - name: Build Health
-        run: ./gradlew buildHealth --build-cache --stacktrace
+      - uses: actions/cache@v2.1.6
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('checksum.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
-      - name: Unit Tests
-        run: ./gradlew test --build-cache --stacktrace
+      - name: Run checks and tests
+        run: ./gradlew detekt ktlintCheck test --build-cache --no-daemon --stacktrace --gradle-user-home "$GRADLE_HOME"
+
+      - name: Upload test results
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: "${{ github.workspace }}/**/build/reports/tests"
 
       - name: Jacoco test report
         run: ./gradlew jacocoTestReport
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2.1.0
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Upload jacoco report
         uses: actions/upload-artifact@v2
         with:
           name: jacoco-report
           path: "${{ github.workspace }}/**/build/reports/jacoco"
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2.1.0
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
