--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
+          distribution: 'zulu'
           java-version: 11
+          cache: 'gradle'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
