Add unit tests for sorting algorithms + update ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,8 @@ jobs:
           path: "${{ github.workspace }}/**/build/reports/jacoco"
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3.1.0
+        uses: codecov/codecov-action@v3.1.4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./build/reports/jacoco/report.xml
+          verbose: true
