--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,7 @@ jobs:
           verbose: true
   qodana:
     runs-on: ubuntu-latest
+    needs: build
     permissions:
       contents: write
       pull-requests: write
