--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
+          java-version: '17'
           distribution: 'zulu'
-          java-version: 11
           cache: 'gradle'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -61,7 +61,9 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: jacoco-report
-          path: "${{ github.workspace }}/**/build/reports/jacoco"
+          path: |
+            "${{ github.workspace }}/**/build/reports/jacoco"
+            "${{ github.workspace }}/**/build/jacoco/text.exec"
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.4
@@ -81,6 +83,14 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
           fetch-depth: 0  # a full history is required for pull request analysis
+      - name: Prepare dirs
+        run: ls -ls && mkdir .qodana && mkdir .qodana/coverage-data && ls -ls
+      - name: Copy jacoco coverage files
+        run: cp -a ./build/reports/jacoco/ .qodana/coverage-data && ls -ls
+      - name: Copy jacoco test files
+        run: cp -a ./build/jacoco/text.exec .qodana/coverage-data && ls -ls
+      - name: Copy test coverage files
+        run: cp -a ./build/reports/tests/ .qodana/coverage-data && ls -ls
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.2
         env:
