--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,8 @@ jobs:
         run: cp -a ./build/jacoco/test.exec .qodana/coverage-data && ls -la
       - name: Copy test coverage files
         run: cp -a ./build/reports/tests/ .qodana/coverage-data && ls -la
+      - name: Check qodana coverage files
+        run: ls -la && ls -la .qodana/coverage-data
       - name: 'Qodana Scan'
         uses: JetBrains/qodana-action@v2023.2
         env:
