--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: Build
+
 on:
   push:
     branches:
@@ -8,70 +9,83 @@ on:
   pull_request:
     types: [ opened, synchronize, reopened ]
 
-env:
-  GRADLE_HOME: ${{ github.workspace }}/gradle-home
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0  # Shallow clones should be disabled for better analysis relevancy
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'zulu'
           cache: 'gradle'
+
+      - name: Validate Gradle Wrapper
+        run: ./gradlew --version
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Cache gradle dependencies
-        uses: actions/cache@v3.0.8
+      - name: Cache Gradle dependencies
+        uses: actions/cache@v3.3.2
         with:
           path: ${{ env.GRADLE_HOME }}/caches
-          # Include the SHA in the hash so this step always adds a cache entry. If we didn't use the SHA, the artifacts
-          # would only get cached once for each build config hash.
-          # Don't use ${{ runner.os }} in the key so we don't re-assemble for UI tests.
-          key: gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/buildSrc/**') }}-${{ github.sha }}
-          # The first time a SHA is assembled, we still want to load dependencies from the cache.
-          # Note that none of jobs dependent on this one need restore keys, since they'll always have an exact hit.
+          key: |
+            gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+            -${{ hashFiles('**/*.gradle*') }}
+            -${{ hashFiles('**/buildSrc/**') }}
+            -${{ github.sha }}
           restore-keys: |
-            gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('**/*.gradle*') }}-${{ hashFiles('**/buildSrc/**') }}-
+            gradle-${{ hashFiles('**/gradle/wrapper/gradle-wrapper.properties') }}
+            -${{ hashFiles('**/*.gradle*') }}
+            -${{ hashFiles('**/buildSrc/**') }}
 
-      - name: Run checks and tests
-        run: ./gradlew detekt ktlintCheck test --build-cache --no-daemon --stacktrace --gradle-user-home "$GRADLE_HOME"
+      - name: Run checks and test
+        run: ./gradlew detekt ktlintCheck --build-cache --no-daemon --stacktrace --gradle-user-home "$GRADLE_HOME"
 
-      - name: Upload test results
-        if: ${{ always() }}
-        uses: actions/upload-artifact@v3
+      - name: Build with Gradle and test
+        run: ./gradlew build -x koverVerify  # Skipping koverVerify to avoid failure if coverage has lowered
+
+      - name: Generate Test Coverage Xml Report
+        run: ./gradlew koverXmlReport
+
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2
         with:
-          name: test-results
-          path: "${{ github.workspace }}/**/build/reports/tests"
-
-      - name: Jacoco test report
-        run: ./gradlew jacocoTestReport
-
-      - name: Check build dirs
-        run: ls -la && ls -la build && ls -la build/reports && ls -la build/jacoco
-
-      - name: Upload jacoco report
-        uses: actions/upload-artifact@v3
-        with:
-          name: jacoco-report
-          path: "${{ github.workspace }}/**/build/reports/jacoco"
-
-      - name: Upload jacoco test exec file
-        uses: actions/upload-artifact@v3
-        with:
-          name: jacoco-test-exec-file
-          path: build/jacoco/test.exec
+          parallel: true
+          file: ./build/reports/kover/report.xml
+          debug: true
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./build/reports/jacoco/report.xml
+          directory: ./build/reports/kover/
+          files: ./build/reports/kover/report.xml
           verbose: true
+
+      - name: Upload test coverage to Code Climate
+        uses: paambaati/codeclimate-action@v5.0.0
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+          JACOCO_SOURCE_PATH: "${{github.workspace}}/src/main/kotlin"
+        with:
+          coverageCommand: ./gradlew test jacocoTestReport
+          coverageLocations: ./build/reports/jacoco/test/jacocoTestReport.xml:jacoco
+          debug: true
+      - name: Run codacy-coverage-reporter
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: ./build/reports/jacoco/test/jacocoTestReport.xml
