--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,21 @@
+# Kotlin-specific configuration (adjust as needed)
 kotlin.code.style=official
-#kotlin.experimental.tryK2=true
-org.gradle.jvmargs=-Xmx3g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
-org.gradle.daemon=false
+kotlin.coroutines=enable
+# Set the JVM heap size for the Gradle Daemon (adjust as needed)
+org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC
+# Gradle Daemon: Enable or disable the Gradle Daemon (improves build speed)
+org.gradle.daemon=true
+# Parallel execution: Enable parallel task execution for multi-core processors
 org.gradle.parallel=true
+# Build caching: Enable or disable build caching (improves build speed)
 org.gradle.caching=true
+# Enable configuration on demand (only configure projects that are needed)
+org.gradle.configureondemand=true
+# Configure the maximum number of concurrent build cache connections (adjust as needed)
+org.gradle.caching.http.max-concurrent-connections=50
+# Optimize dependency resolution by caching resolved dependencies
+org.gradle.dependency-resolution-caching=true
+# Optimize dependency resolution by avoiding network access when possible
+org.gradle.unresolved-dependencies=use-cache
+# Optimize task input and output caching to minimize unnecessary task re-execution
+org.gradle.caching.debug=false
