--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,8 +82,8 @@ jobs:
         uses: codecov/codecov-action@v3.1.4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./build/reports/kover/
-          files: ./build/reports/kover/report.xml
+          directory: ./build/reports/jacoco/test/ # ./build/reports/kover/
+          files: ./build/reports/jacoco/test/jacocoTestReport.xml # ./build/reports/kover/report.xml
           verbose: true
 
       - name: Upload test coverage to Code Climate
