--- a/diktat-analysis.yml
+++ b/diktat-analysis.yml
@@ -2,8 +2,8 @@
 - name: DIKTAT_COMMON
   configuration:
     # put your package name here - it will be autofixed and checked
-    domainName: your.name.here
-    testDirs: test
+    domainName: dev.shtanko.algorithms
+    #testDirs: test
     # expected values:  disabledChapters: "Naming, Comments, General, Variables, Functions, Classes"
     # or: "1, 2, 3, 4, 5, 6"
     disabledChapters: ""
