--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-coroutines = "1.9.0-RC.2"  # https://github.com/Kotlin/kotlinx.coroutines
-junit = "5.11.0-M2"        # https://junit.org/junit5 | https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter
-kotlin = "2.0.20"          # https://github.com/JetBrains/kotlin
-mockk = "1.13.12"          # https://mockk.io
-detekt = "1.23.6"          # https://github.com/detekt/detekt
+coroutines = "1.9.0"       # https://github.com/Kotlin/kotlinx.coroutines
+junit = "5.11.2"           # https://junit.org/junit5 | https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter
+kotlin = "2.0.21"          # https://github.com/JetBrains/kotlin
+mockk = "1.13.13"          # https://mockk.io
+detekt = "1.23.7"          # https://github.com/detekt/detekt
 dokka = "1.9.20"           # https://github.com/Kotlin/dokka
 spotless = "7.0.0.BETA2"   # https://github.com/diffplug/spotless
 dependency = "1.32.0"      # https://github.com/autonomousapps/dependency-analysis-gradle-plugin
@@ -13,7 +13,7 @@ ktlint = "12.1.1"          # https://github.com/JLLeitschuh/ktlint-gradle
 assertj = "3.26.3"         # https://mvnrepository.com/artifact/org.assertj/assertj-core | https://assertj.github.io/doc
 kover = "0.8.3"            # https://github.com/Kotlin/kotlinx-kover
 diktat = "2.0.0"           # https://github.com/saveourtool/diktat
-mockito = "5.13.0"         # https://mvnrepository.com/artifact/org.mockito/mockito-core
+mockito = "5.14.1"         # https://mvnrepository.com/artifact/org.mockito/mockito-core
 mockito_kotlin = "2.2.0"   # https://mvnrepository.com/artifact/com.nhaarman.mockitokotlin2/mockito-kotlin
 
 [libraries]
